# Avoid-ad-read

./: .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: cmake_uninstall.cmake.in  epub_cleaner-config.cmake.in  toolchain-example.cmake  version.rc.in
config/: project.config.json
docs/: FINAL_PROJECT_STATUS.md  FINAL_PROJECT_STATUS_ZH.md  INDEX.md  INSTALL.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PROJECT_SUMMARY_ZH.md  README.md  README_ZH.md  REFACTORED_USAGE.md  UPDATE_SUMMARY.md  USAGE.md  USAGE_ZH.md  test_epub_structure.md
include/: ad_patterns.h  epub_processor.h  file_utils.h  iconv_wrapper.h  logger.h  version.h  version.h.in  zip_utils.h
src/: ad_patterns.cpp  epub_processor.cpp  file_utils.cpp  iconv_wrapper.cpp  logger.cpp  main.cpp  zip_utils_impl.cpp  zlib_utils.cpp
tools/: build.bat  example_patterns.txt  test_refactored.bat
tools/build-tool/: compile_simple.bat
tools/scripts/: build.bat  collect_runtime.bat  debug_release_structure.bat  debug_release_structure.sh  read_version.bat  read_version.sh  test_packaging.sh
tools/scripts/test/: test_build.bat  test_local_build.bat
tools/test/: test_basic.cpp  test_main.cpp
